# i3switch

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  Makefile  README.md  build.sh  setup.sh
.github/workflows/: c-cpp.yml  master.yml  python.yml  rust.yml  ubuntu-cpp.yml  ubuntu-python.yml  ubuntu-rust.yml
cpp/: CMakeLists.txt  Makefile  build.sh  cliff.toml
cpp/src/: converters.cpp  converters.hpp  linear.hpp  main.cpp  planar.cpp  planar.hpp
cpp/src/connection/: i3client.cpp  i3client.hpp  socket.cpp
cpp/src/utils/: bytesstuff.cpp  bytesstuff.hpp  stringf.hpp
docs/: contribute.md  history.md
python/: Makefile  build.sh  cliff.toml  requirements.txt  run.py
python/i3switch/: __main__.py  controller.py  input.py  utils.py  version.py.in
rust/: Cargo.toml  Cargo.toml.in  Makefile  README.md  build.sh  cliff.toml
rust/jsons/: 2node_splith.json  ambigous_tabs.json  empty_node.json  empty_tabs.json  empty_workspace.json  node.jsonschema  root_with_several_nodes.json  tabs_with_deep_focus.json
rust/src/: cli.rs  converters.rs  lib.rs  linear.rs  logging.rs  main.rs  navigation.rs
rust/src/backend/: backend.rs  mod.rs  traits.rs
rust/src/backend/i3/: backend.rs  compass.rs  json.rs  mod.rs
rust/src/backend/wmctl/: backend.rs  mod.rs
rust/src/backend/xcb/: backend.rs  client.rs  mod.rs
rust/src/connection/: i3client.rs  mod.rs
rust/src/planar/: alignment.rs  arrangement.rs  mod.rs
rust/src/types/: mod.rs  rect.rs  window.rs
scripts/: fpm_package_ci.sh  install_deps.sh  version.sh
src/: converters.cpp  converters.hpp  direction.hpp  getoptext.hpp.gch  grid.cpp  grid.hpp  i3tree.cpp  i3tree.hpp  linear.cpp  linear.hpp  log.hpp.gch  logging.hpp  main.cpp  planar.cpp  planar.hpp  socket.cpp  socket.hpp  socket.hpp.gch  tabs.cpp  tabs.hpp
src/connection/: i3binds.cpp  i3binds.hpp  i3client.cpp  socket.hpp
src/i3-pyswitch/: __main__.py  config.py  input.py  utils.py
src/i3switch/: __main__.py  config.py  controller.py  i3.py  input.py  utils.py
src/utils/: call.hpp  getoptext.cpp  getoptext.hpp  logging.hpp  stringf.hpp  strprintf.hpp
